--- a/app/templates/Candidate/login.html
+++ b/app/templates/Candidate/login.html
@@ -1,4 +1,6 @@
+{% extends 'base.html'  %}
 {% load static %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,34 +9,37 @@
 <title>Candidate Login Form</title>
 <style>
   body {
+    overflow-x: hidden;
+    height: 100%;
+    width: 100%;
     margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    overflow: hidden;
-  }
-
-  .container {
-    flex-wrap: wrap;
-    position:absolute;
-    min-height: 40vh;
-    min-width: 30vw;
-    padding: 30px;
-    top: 45%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding:0;
+    box-sizing: border-box;
   
+   
+  }
+  .container {
+    display: flex;
+   align-items: center;
+    min-width: 400px;
+    min-height: 209px;
+    padding: 30px;
+    margin-left: 4%;
+    margin-bottom: 2%;
+
+ 
     border-radius: 10px;
      background-color: wheat;
    
   }
-   .container:hover {
+   /* .container:hover {
   
           box-shadow: 25px 25px 75px rgba(160, 66, 66, 0.25),
             10px 10px 70px rgba(0,0,0,0.25),
             inset 5px 5px 10px rgba(0,0,0,0.5),
             inset 5px 5px 20px rgba(255,255,255,0.2),
             inset -5px -5px 15px rgba(0, 0, 0, 0.75); 
-   }
+   } */
 
   .form-group {
     margin-bottom: 20px;
@@ -49,7 +54,7 @@
   .form-group input {
     display: flex;
     min-width: 300px;
-    width:90%;
+    
     padding: 10px ;
    border: none;
    outline: none;
@@ -72,7 +77,7 @@
   .btn {
 
     display: block;
-    width: 90%;
+   
     padding: 8px;
     border: none;
     border-radius: 5px;
@@ -92,25 +97,7 @@
   }
 
   /* Wavy background animation */
-  body:before {
-    content: '';
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-     background: linear-gradient(to right, #ff7e5f, #feb47b, #ffef9d, #a0fe65, #6bfeca, #47c1ff, #6367f0, #9d65c9, #ff6bcb, #ff7e5f);
-
-            {% comment %} box-shadow: 25px 25px 75px rgba(160, 66, 66, 0.25),
-            10px 10px 70px rgba(0,0,0,0.25),
-            inset 5px 5px 10px rgba(0,0,0,0.5),
-            inset 5px 5px 20px rgba(255,255,255,0.2),
-            inset -5px -5px 15px rgba(0, 0, 0, 0.75);  {% endcomment %}
-    background-size: 200% 100%;
-    animation: gradient 10s ease infinite;
-     box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
-                0 10px 10px -5px rgba(0, 0, 0, 0.04);
-  }
+ 
 .heading {
     position:relative;
     display: flex;
@@ -171,3 +158,4 @@
 </div>
 </body>
 </html>
+{% endblock %}
