--- a/app/templates/Candidate/registration.html
+++ b/app/templates/Candidate/registration.html
@@ -1,3 +1,7 @@
+{% extends 'base.html'  %}
+{% load static %}
+
+ {% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         *{
-            margin:0;
+            margin:0px;
             padding:0;
             box-sizing: border-box;
             font-family: 'Nunito', sans-serif;
@@ -17,30 +21,25 @@
         body {
             width: 100%;
             height:100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+           overflow-x: hidden;
+           position: absolute;
+           justify-content: center;
+        }
+        .container {
+          
+            position: relative;
+            min-width: 500px;
+            width: 80%;
+            border-radius: 16px;
+            padding: 30px;
+            margin:50px 100px ;
+            margin-left: 13%;
+            background-color: wheat;
             /* box-shadow: 25px 25px 75px rgba(0,0,0,0.25),
             10px 10px 70px rgba(0,0,0,0.25),
             inset 5px 5px 10px rgba(0,0,0,0.5),
             inset 5px 5px 20px rgba(255,255,255,0.2),
-            inset -5px -5px 15px rgba(0, 0, 0, 0.75); 
-            transition: 0.3s; */
-           
-        }
-        .container {
-            position: relative;
-            max-width: 1200px;
-            width: 100%;
-            border-radius: 16px;
-            padding: 30px;
-            margin:50px 25px;
-            background-color: wheat;
-            box-shadow: 25px 25px 75px rgba(0,0,0,0.25),
-            10px 10px 70px rgba(0,0,0,0.25),
-            inset 5px 5px 10px rgba(0,0,0,0.5),
-            inset 5px 5px 20px rgba(255,255,255,0.2),
-            inset -5px -5px 15px rgba(0, 0, 0, 0.75); 
+            inset -5px -5px 15px rgba(0, 0, 0, 0.75);  */
         }
         .container header {
             position:relative;
@@ -226,9 +225,18 @@
        }
 
      
+@media  screen and ( max-width: 800px)  {
+     .input-fields{
+        display:inline-flex;
+         flex-direction:column;
+         width:calc(100% / 1 - 15px);
+         margin:5px 5px;
+         justify-content: space-between;
+        color:cornflowerblue;
+        font-size: 1rem;
+     }
 
-
-
+}
 
 
 
@@ -245,10 +253,24 @@
         display:inline-flex;
          flex-direction:column;
          width:calc(100% / 1 - 15px);
-        margin:5px;
+         margin:5px 5px;
          justify-content: space-between;
         color:cornflowerblue;
-        font-size: 1.3rem;
+        font-size: 1rem;
+     }
+     .container{
+        min-width: 300px;
+        width: 100%;
+        margin:25px 10px;
+        font-size: 0.8rem;
+     }
+     .container form button {
+        margin-left: 40px;
+     }
+     .logo {
+      
+        margin-top: -5px;
+        font-size: 2rem;
      }
 
  }
@@ -409,3 +431,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js" integrity="sha512-GWzVrcGlo0TxTRvz9ttioyYJ+Wwk9Ck0G81D+eO63BaqHaJ3YZX9wuqjwgfcV/MrB2PhaVX9DkYVhbFpStnqpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 </html>
+{% endblock  %}
