--- a/app/templates/Employer/registration.html
+++ b/app/templates/Employer/registration.html
@@ -1,4 +1,6 @@
+{% extends 'base.html'  %}
 {% load static %}
+ {% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,42 +14,42 @@
             box-sizing: border-box;
             font-family: 'Nunito', sans-serif;
             scroll-behavior: smooth;
+           
             
         }
         body {
-            width: 100%;
-            height:100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            width: auto;
+            height:100%;
             background: slategrey;
-            box-shadow: 25px 25px 75px rgba(0,0,0,0.25),
+            /* box-shadow: 25px 25px 75px rgba(0,0,0,0.25),
             10px 10px 70px rgba(0,0,0,0.25),
             inset 5px 5px 10px rgba(0,0,0,0.5),
             inset 5px 5px 20px rgba(255,255,255,0.2),
-            inset -5px -5px 15px rgba(0, 0, 0, 0.75); 
+            inset -5px -5px 15px rgba(0, 0, 0, 0.75);  */
             transition: 0.3s;
-           
+            overflow-x: hidden;
+
         }
 
         .container {
          
-            position: relative;
-            max-width: 1000px;
-            width: 100%;
+           position: relative;
+            min-width: 500px;
+            width: 80%;
             border-radius: 16px;
             padding: 30px;
-            margin:50px 25px;
+            margin:50px 100px ;
+            margin-left: 13%;
             background-color: wheat;
         }
-          .container:hover {
+          /* .container:hover {
             box-shadow: 25px 25px 75px rgba(0,0,0,0.25),
             10px 10px 70px rgba(0,0,0,0.25),
             inset 5px 5px 10px rgba(0,0,0,0.5),
             inset 5px 5px 20px rgba(255,255,255,0.2),
             inset -5px -5px 15px rgba(0, 0, 0, 0.75); 
 
-          }
+          } */
         .container header {
             position:relative;
             font-size: 1.9rem;
@@ -178,8 +180,63 @@
 
 
 
+ @media  screen and ( max-width: 850px)  {
+     .input-fields{
+        display:inline-flex;
+         flex-direction:column;
+         width:calc(100% / 1 - 16px);
+        margin:5px;
+         justify-content: space-between;
+        color:cornflowerblue;
+        font-size: 1.3rem;
+     }
+     .container{
+        min-width: 250px;
+        width: 100%;
+        margin:25px 20px;
+        font-size: 0.8rem;
+     }
+     .container form button {
+        margin-left: 40px;
+     }
+     .logo {
+      
+        margin-top: -5px;
+        font-size: 2rem;
+     }
 
+ }
+ /* for mobiles */
+ @media  screen and (min-width=350px), ( max-width: 480px) {
+     .input-fields{
+        /* background-color: black; */
+        display:inline-flex;
+         flex-direction:column;
+         width:calc(100% / 1 - 16px);
+        margin:0px 0px;
+         justify-content: space-between;
+        color:cornflowerblue;
+        font-size: 0.8rem;
+     }
+     .container{
+        overflow-x: hidden;
+      
+        min-width: 200px;
+        width: 100%;
+        margin:20px 0px;
+        font-size: 0.8rem;
+     }
+     .container form button {
+        margin-left: 40px;
+       font-size: 2rem;
+     }
+     .logo {
+      
+        margin-top: -5px;
+        font-size: 1.6rem;
+     }
 
+ }
 
 
 
@@ -194,6 +251,21 @@
         color:cornflowerblue;
         font-size: 1.3rem;
      }
+     .container{
+        min-width: 300px;
+        width: 100%;
+        margin:25px 10px;
+        font-size: 0.8rem;
+     }
+     .container form button {
+        margin-left: 40px;
+     }
+     .logo {
+      
+        margin-top: -5px;
+        font-size: 2rem;
+     }
+
  }
     </style>
 </head>
@@ -287,3 +359,4 @@
 
 </body>
 </html>
+{% endblock %}
