--- a/app/templates/contact_us.html
+++ b/app/templates/contact_us.html
@@ -1,4 +1,6 @@
+
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,14 +9,12 @@
 
     <title>About Us</title>
     <!-- Flowbite -->
+   
    <style>
     body {
         margin:0;
         padding:0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-       height: 100vh;
+        height: 100vh;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
     .heading {
@@ -196,6 +196,7 @@
     </style>
 </head>
 <body>
+   {% include "_navbar.html" %}
     <div class="container">
         <h1 class="heading">Contact Us</h1>
         <form action="">
@@ -240,5 +241,7 @@
                     </div>
         </form>
     </div>
+   
+    {% include "_footer.html" %}
 </body>
 </html>
