--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12,14 +12,14 @@
     padding: 0;
     /* font-family: Edu VIC WA NT Beginner ; */
     font-family: 'Nunito', sans-serif;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     outline:none;
     scroll-behavior: smooth;
 }
 body{
     overflow-x:hidden;
-    height: auto;
-    width: auto;
+    height: 100%;
+    width: 100%;
     /* background-image: url(https://images.pexels.com/photos/5717313/pexels-photo-5717313.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
     background-position: center;
     background-repeat: no-repeat;
@@ -28,15 +28,15 @@ body{
    background:linear-gradient(90deg, rgba(255, 255, 7, 0.467),rgb(95, 55, 240));;
    color:white;
    scroll-behavior: smooth;
-    box-shadow: 25px 25px 75px rgba(0,0,0,0.25),
+    /* box-shadow: 25px 25px 75px rgba(0,0,0,0.25),
   10px 10px 70px rgba(0,0,0,0.25),
   inset 5px 5px 10px rgba(0,0,0,0.5),
   inset 5px 5px 20px rgba(255,255,255,0.2),
-  inset -5px -5px 15px rgba(0, 0, 0, 0.75);
+  inset -5px -5px 15px rgba(0, 0, 0, 0.75); */
 }
 
 
-.navbar{
+/* .navbar{
     width: 100%;
     height : 60px;
     display : flex;
@@ -46,7 +46,7 @@ body{
     left:0;
     padding: 1rem 2.5rem;
     z-index: 10;
-    /* color: var(--whiteColor); */
+    /* color: var(--whiteColor); 
     background:transparent;  
     background-color: steelblue;
 
@@ -54,9 +54,9 @@ body{
 .logo{
     margin-top: -13px;
     letter-spacing: px;
-    /* text-decoration: none; */
+    /* text-decoration: none; 
     color: white;
-    /* color:#0076de; */
+    /* color:#0076de; 
     font-size: 2.6rem;
     
 }
@@ -97,7 +97,7 @@ body{
     padding: 5px 15px;
     transition: top 0.5s, opacity 0.4s ;
 
-} */
+} 
 .menu a {
   
     color: var(--whiteColor);
@@ -116,7 +116,7 @@ body{
    
 
 
-} */
+} 
 .menu a:hover::after{
     top:50%;
     opacity: 1;
@@ -129,7 +129,7 @@ body{
   10px 10px 70px rgba(0,0,0,0.25),
   inset 5px 5px 10px rgba(0,0,0,0.5),
   inset 5px 5px 20px rgba(255,255,255,0.2),
-  inset -5px -5px 15px rgba(0, 0, 0, 0.75); */
+  inset -5px -5px 15px rgba(0, 0, 0, 0.75); 
 
 }
  svg{
@@ -141,14 +141,14 @@ body{
 
 }
 .menu-toggle .bar{
-    /* background:black; */
+    /* background:black; 
     width: 15px;
     height: 2px;
     margin: 3px auto;
     transition: all 0.3 ease-in-out;
-    /* background-color: var(--whiteColor); */
+    /* background-color: var(--whiteColor); 
     cursor: pointer;
-}
+} */
 
  
 /* .navbar a, .navbar li {
@@ -476,6 +476,7 @@ svg:hover {
 header{
   
     width: 100%;
+  
     height: 70vh;
     /* background-image: url(https://images.pexels.com/photos/5717313/pexels-photo-5717313.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=11);  */
     background-position: center;
@@ -1079,7 +1080,17 @@ footer {
 .row ul li a:hover {
     color:wheat;
 }
-
+@media screen and(max-width = 350px) {
+    .header {
+        height: 70vh;
+    }
+    .header-title {
+        position: relative;
+        left:0rem;
+        top:3rem;
+        font-size: 30px;
+    }
+}
 
 /* form {
     padding-bottom:  15px;
@@ -1116,7 +1127,7 @@ form button .fas { font-size: 1.2rem;
     color: white; */
 
 
-.social-icons .fa-brands {
+/* .social-icons .fa-brands {
     width:40px;
    height:40px;
    border-radius: 50%;
@@ -1127,11 +1138,11 @@ form button .fas { font-size: 1.2rem;
   background: white;
   margin-right: 15px;
   cursor: pointer;
-}
+} */
 
 
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
     .menu {
         /* display:none;
         flex-direction: column;
@@ -1139,7 +1150,7 @@ form button .fas { font-size: 1.2rem;
         position: absolute;
         top: 60px;
         left: 0;
-        width: 100%; */  position:fixed;
+        width: 100%;  position:fixed;
         top:0;
         right: 0;
         height: 100%;
@@ -1164,14 +1175,14 @@ form button .fas { font-size: 1.2rem;
         display:flex;
         color: black;
         background:#33FFA8;
-    } */
+    } 
 
     .menu a {
         margin: 10px;
         padding: 7px;
-        /* border-bottom: 1px solid black; */
+        /* border-bottom: 1px solid black;
         color: white;
-        /* border: 1px solid violet; */
+        /* border: 1px solid violet; 
         border-radius: 10px;
     }
     svg{
@@ -1184,7 +1195,7 @@ form button .fas { font-size: 1.2rem;
         justify-content: flex-end;
         align-items:flex-end;
     }
-}
+} */
 
  /* @media screen and (max-width: 790px) {
     .navbar {
